--- a/mocap_optitrack_driver_params.yaml
+++ b/mocap_optitrack_driver_params.yaml
@@ -2,7 +2,7 @@ mocap_optitrack_driver_node:
   ros__parameters:
     connection_type: "Multicast" # Unicast / Multicast
     server_address: "192.168.1.237"
-    local_address: "192.168.1.83"
+    local_address: "192.168.1.166"
     multicast_address: "239.255.42.99"
     server_command_port: 1510
     server_data_port: 1511
@@ -26,3 +26,5 @@ mocap_optitrack_driver_node:
         name: "rosbot"
       11:
         name: "rosbot3"
+      8:
+        name: "racetrack"
